--- a/examples/scSurvival_Tutorial_in_Python.html
+++ b/examples/scSurvival_Tutorial_in_Python.html
@@ -8074,8 +8074,9 @@ Added hazard and attention to adata_new.obs.
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<!--- TODO: Add reference to the tutorial
 <h2 id="Reference">Reference<a class="anchor-link" href="#Reference">¶</a></h2><p>scSurvial: survival analysis from single-cell cohort data at cellular resolution.</p>
-<p>Tao Ren, Faming Zhao, Canping Chen, Ling-Yun Wu and Zheng Xia</p>
+<p>Tao Ren, Faming Zhao, Canping Chen, Ling-Yun Wu and Zheng Xia</p> -->
 </div>
 </div>
 </div>
