--- a/examples/scSurvival_Tutorial_in_R.html
+++ b/examples/scSurvival_Tutorial_in_R.html
@@ -1658,7 +1658,9 @@ batches</a></li>
 on predicting independent data with batch effects</a></li>
 </ul></li>
 </ul></li>
-<li><a href="#reference" id="toc-reference">Reference</a></li>
+<!-- TODO: add reference
+<li><a href="#reference" id="toc-reference">Reference</a></li> 
+-->
 <li><a href="#package-versions" id="toc-package-versions">Package
 versions</a></li>
 </ul>
@@ -2421,12 +2423,13 @@ prediction results for the test data.</p>
 </div>
 </div>
 </div>
+<!-- TODO: add reference.
 <div id="reference" class="section level1">
 <h1>Reference</h1>
 <p>scSurvial: survival analysis from single-cell cohort data at cellular
 resolution.</p>
 <p>Tao Ren, Faming Zhao, Canping Chen, Ling-Yun Wu and Zheng Xia</p>
-</div>
+</div> -->
 <div id="package-versions" class="section level1">
 <h1>Package versions</h1>
 <p>R packages loaded in this tutorial: <br> Seurat 5.1.0 <br> reticulate
